--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "sass": "^1.54.9",
+    "styled-components": "^5.3.6",
     "web-vitals": "2.1.4"
   },
   "scripts": {
